- FIx broken layout

--- a/NTBStampDuty/web/css/jquery-ui.css
+++ b/NTBStampDuty/web/css/jquery-ui.css
@@ -122,7 +122,7 @@
 }
 
 .ui-dialog .land_detail, .ui-dialog .add_new_land {
-    top: 476px;
+    top: 474px;
     right: 24px;
 }
 
