--- a/NTBStampDuty/web/css/land_page_styple.css
+++ b/NTBStampDuty/web/css/land_page_styple.css
@@ -27,7 +27,7 @@
 
 .ui-widget div .plus_navigation{width: 21px; height: 21px; vertical-align: middle; margin-top: -5px; margin-left: 3px;}
 .ui-widget div .land_size {margin-left: 35px; margin-top: 1px;}
-.ui-widget div .land_address {margin-left: 10px; width: 470px;}
+.ui-widget div .land_address {margin-left: 10px; width: 440px;}
 .ui-widget div .land_status {margin-left: 20px;}
 .ui-widget div .land_type {margin-left: 9px;}
 .ui-widget div .land_price {margin-left: 63px;}
